# videoinfo

./: CMakeLists.txt  main.cpp
res/: res.ts
src/add_sei/: add_sei.cpp  add_sei.h
src/read_sei/: read_sei.cpp  read_sei.h
